Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48799

Memory leak in QSGBatchRenderer::Renderer::map()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.5.0, 5.5.1, 5.6.0 Alpha
    • Quick: SceneGraph
    • None
    • Arch Linux
      Video driver: xf86-video-nouveau
    • 3e9f61f305dc4c988e6f2718df56df80f639734e

      In the uncommon case (m_context->hasBrokenIndexBufferObjects() || m_visualizeMode != VisualizeNothing) of mapping a buffer, malloc is called without first freeing the previous malloc.

      Attached are the git bisect logs used to track this issue down, a patch to fix this issue, and a testcase to show the memory leak, run it on a system that has Broken Index Buffer Objects and watch the app's memory keep going up.

      Regression was introduced with:
      qt5 commit: 9347499e78f03710eaf24af3c1e7ac650d0ef81d
      qtdeclarative commit: a371bac3fba73f92aaa63a68d8ab1ae81a1d1031

        1. 0001-Scene-Graph-Fixed-memory-leak-in-QSGBatchRenderer-Re.patch
          2 kB
          Martin Banky
        2. qt5.bisect.log
          1 kB
          Martin Banky
        3. qtdeclarative.bisect.log
          1 kB
          Martin Banky
        4. texttest.tar.xz
          1 kB
          Martin Banky
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sletta Gunnar Sletta
            MartinBanky Martin Banky
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes