Scene Graph: Fixed memory leak in QSGBatchRenderer::Renderer::map()

In the uncommon case (m_context->hasBrokenIndexBufferObjects()
|| m_visualizeMode != VisualizeNothing) of mapping a buffer, malloc is
called without first freeing the previous malloc.

Regression was introduced with:
    qt5 commit: 9347499e78f03710eaf24af3c1e7ac650d0ef81d
    qtdeclarative commit: a371bac3fba73f92aaa63a68d8ab1ae81a1d1031

[ChangeLog][QtQuick][Scene Graph] Fixed memory leak in
QSGBatchRenderer::Renderer::map()

Task-number: QTBUG-48799
Change-Id: I5ef4b7301d390463845aeb192851f86655962499
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>